--- a/gb/20/5/4/n12080196.md
+++ b/gb/20/5/4/n12080196.md
@@ -1,59 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/okxz2368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/okxz2368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/okxz2368/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/okxz2368/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>福特：枪支回购资金 应用于打击枪支走私</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/shutterstock_1438926476-600x400.jpg" />
 <h6>安省省长福特表示，联邦政府应该打击枪支走私。（Shutterstock）
 </h6>
 <hr>
-<p>【大纪元2020年05月03日】（大纪元记者季薇多伦多报导）<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E8%81%94%E9%82%A6.md#1">联邦</a>政府上周五（5月1日）宣布，将很快对“突击式”步枪进行回购。安省省长周六回应，政府应该把回购<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md#1">枪支</a>的资金用于打击枪支犯罪。</p>
-<p>在周六的每日疫情更新新闻会上，<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E7%A6%8F%E7%89%B9.md#1">福特</a>表达了对<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E8%81%94%E9%82%A6.md#1">联邦</a>6亿元<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md#1">枪支</a>回购计划的失望。福特说，他更希望那笔钱用于加强边境安全，以防止枪支被非法偷运到加拿大。</p>
-<p><ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E7%A6%8F%E7%89%B9.md#1">福特</a>表示，联邦的首要任务应该是，收严针对枪支犯罪的罪犯和帮派成员的保释条件和监禁。让他感到“沮丧”的是，犯罪分子经常在被捕后几天内就能够返回街头，而有些人的刑期只有一两年。</p>
-<p>“问题不在于合法的枪支拥有者。我们需要针对<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E8%B5%B0%E7%A7%81.md#1">走私</a>者，我们需要严厉惩处威胁我们街道的那些黑帮。”福特说：“这些持枪（罪犯）被抓该判无期徒刑，（我们）不要只是轻摸轻打一下， 然后把矛头指向合法、守法的枪支拥有者。”</p>
+<p>【大纪元2020年05月03日】（大纪元记者季薇多伦多报导）<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%81%94%E9%82%A6.md#1">联邦</a>政府上周五（5月1日）宣布，将很快对“突击式”步枪进行回购。安省省长周六回应，政府应该把回购<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md#1">枪支</a>的资金用于打击枪支犯罪。</p>
+<p>在周六的每日疫情更新新闻会上，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A6%8F%E7%89%B9.md#1">福特</a>表达了对<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%81%94%E9%82%A6.md#1">联邦</a>6亿元<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md#1">枪支</a>回购计划的失望。福特说，他更希望那笔钱用于加强边境安全，以防止枪支被非法偷运到加拿大。</p>
+<p><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A6%8F%E7%89%B9.md#1">福特</a>表示，联邦的首要任务应该是，收严针对枪支犯罪的罪犯和帮派成员的保释条件和监禁。让他感到“沮丧”的是，犯罪分子经常在被捕后几天内就能够返回街头，而有些人的刑期只有一两年。</p>
+<p>“问题不在于合法的枪支拥有者。我们需要针对<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%B5%B0%E7%A7%81.md#1">走私</a>者，我们需要严厉惩处威胁我们街道的那些黑帮。”福特说：“这些持枪（罪犯）被抓该判无期徒刑，（我们）不要只是轻摸轻打一下， 然后把矛头指向合法、守法的枪支拥有者。”</p>
 <p>福特不认为针对合法持枪者的枪支回购，会使多伦多的枪支暴力事件减少。</p>
-<p>不过，自疫情爆发以来一直与联邦合作的福特表示，愿意与联邦合作，采取措施制止非法枪支<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E8%B5%B0%E7%A7%81.md#1">走私</a>。◇</p>
+<p>不过，自疫情爆发以来一直与联邦合作的福特表示，愿意与联邦合作，采取措施制止非法枪支<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%B5%B0%E7%A7%81.md#1">走私</a>。◇</p>
 <p>责任编辑：文芳</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/18/8/9/n10628033.md#1">安省将拨款2,500万元 用于多伦多打击枪支暴力</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/19/10/24/n11610557.md#1">帮派犯罪飙升 多伦多街头帮派大解析</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/19/11/5/n11635537.md#1">安省惊现易爆弹药库 男子被起诉</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/2/6/n11847279.md#1">多伦多男子卧室存违禁冲锋枪 被判无罪</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/2/23/n11890494.md#1">抢劫绑架杀人案 加国华男谋杀罪成面临遣返</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/23/n12056178.md#1">单日染疫人数再创纪录 安省延长紧急限制令</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/3/n12080290.md#1">用零花钱买零食捐赠 9岁华人男孩感动医生</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/3/n12080175.md#1">疫情下 看看美国人如何给我女儿过生日</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/3/n12080251.md#1">安省又增 434人确诊  社交疏远不会很快消失</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/3/n12080133.md#1">呼吁解除紧急状态 安省人议会大楼抗议</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/9/n10628033.md#1">安省将拨款2,500万元 用于多伦多打击枪支暴力</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/10/24/n11610557.md#1">帮派犯罪飙升 多伦多街头帮派大解析</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/11/5/n11635537.md#1">安省惊现易爆弹药库 男子被起诉</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/2/6/n11847279.md#1">多伦多男子卧室存违禁冲锋枪 被判无罪</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/2/23/n11890494.md#1">抢劫绑架杀人案 加国华男谋杀罪成面临遣返</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/4/23/n12056178.md#1">单日染疫人数再创纪录 安省延长紧急限制令</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13753004.md#1">GTA五月房产交易下降39%?房价涨近10%?</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13753015.md#1">暴风雨两周后 安省民宅维修积压</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752949.md#1">多伦多60%公共饮水喷泉未启动  居民不满</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752945.md#1">安省大选 保守党获得席位逼近历史纪录</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/29/n10096052.md#1" target="_blank">郑兢业：人吃与吃人（四 ）</a></li><li><a href="https://github.com/okxz2368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/4/n10890780.md#1" target="_blank">天空出现“真善忍” 西澳女子圆梦</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/28/n10597749.md#1" target="_blank">林辉：因曾与美国上将同台 燕大教授一家凄惨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/27/n10431591.md#1" target="_blank">澳洲女子的神奇“减肥”经历  5个月70斤</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/2/n12076958.md#1">【拍案惊奇】朝媒报金正恩现身 习家邓家对呛？</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12076815.md#1">【新闻看点】美连6大动作 美中角力升级</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12076867.md#1">朝媒报金正恩现身竣工典礼 川普拒置评</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/2/n12078341.md#1">金正恩若突垮台 美将启动“不可能的任务”</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/2/n12078278.md#1">【一线采访】北京新规 房地产恐面临倒闭潮</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12075345.md#1">流浪猫妈妈带小猫上医院获得帮助 网友赞爆</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/2/n12078172.md#1">范冰冰被堵绝财路？传遭广电总局禁直播卖货</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12073796.md#1">否认与刘亦菲复合 宋承宪：手滑导致按赞帖文</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12074176.md#1">台湾歌手大支再推新歌 呼吁向中共追责</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12074853.md#1">《危险谎言》影评：意外之财 反而是挑战开始</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/2/25/n11893623.md#1">【命理】他为何由相信命运变成不相信命运？</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12073552.md#1">一生波折难掩其风华 东汉才女蔡文姬</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12073149.md#1">“留白”的艺术与人生</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/24/n12058913.md#1">托马斯·杰弗逊撰写独立宣言</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/24/n12059149.md#1">星孛与人事遥相呼应 并非浪得虚名</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/okxz2368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/okxz2368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/4/n12080196.htm">福特：枪支回购资金 应用于打击枪支走私</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/4/n12080196.htm">福特：枪支回购资金 应用于打击枪支走私</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/okxz2368/djy/blob/master/gb/20/5/4/n12080196.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/okxz2368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/okxz2368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/okxz2368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/5/4/n12080196.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
